--- a/MundoPlay/MundoPlay/usuario.resx
+++ b/MundoPlay/MundoPlay/usuario.resx
@@ -240,4 +240,119 @@
         JbBdvlJvgkqamgN/8o9H28g/+UehIv4H1BmccrIx1/AAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btnCadastro.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGeYUxB9wAAACBjSFJNAACH
+        EAAAjBIAAP1NAACBPgAAWesAARIPAAA85gAAGc66ySIyAAABJmlDQ1BBZG9iZSBSR0IgKDE5OTgpAAAo
+        z2NgYDJwdHFyZRJgYMjNKykKcndSiIiMUmA/z8DGwMwABonJxQWOAQE+IHZefl4qAwb4do2BEURf1gWZ
+        xUAa4EouKCoB0n+A2CgltTiZgYHRAMjOLi8pAIozzgGyRZKywewNIHZRSJAzkH0EyOZLh7CvgNhJEPYT
+        ELsI6Akg+wtIfTqYzcQBNgfClgGxS1IrQPYyOOcXVBZlpmeUKBhaWloqOKbkJ6UqBFcWl6TmFit45iXn
+        FxXkFyWWpKYA1ULcBwaCEIWgENMAarTQZKAyAMUDhPU5EBy+jGJnEGIIkFxaVAZlMjIZE+YjzJgjwcDg
+        v5SBgeUPQsykl4FhgQ4DA/9UhJiaIQODgD4Dw745AMDGT/0ZOjZcAAAACXBIWXMAAAsTAAALEwEAmpwY
+        AAAEu0lEQVR4Xu3aW8hlcxjH8aE0osgh50MuNIgoQiJulEhuyI0auXOIcWhIpEwiKceSmhmHMsg4TeJi
+        JMIcNA1p3DjlcCmUUwiv7+9trd2z/+9v7bWePTubd+23PvX6r2f91+//vGvW2mttS+bm5nrNDvaJHewT
+        O9gnQ/+xbdu2c3Afbsdti9C9uCSuOS7+ZPyFuR5YPtQABu7AN6GgD+6JDVhbbOyDtbEBq/F32NgHq9sa
+        8AUuxnJc8T92Ht5AXJu0NmCTtrWhbqpcphJ1DyCuTVobsDVO0oS6qXKZStQ9hLg2mTVA2+qCWQNQNmBL
+        nKQJdVPlMpWoexBxbTJrgLbVBbMGYDE34GHEtUmvGrAKcW3S2oDNcZIm1E2Vy1Si7kbEtUmvGnAz4tpk
+        1gBtqwtmDUDZgMX0SXCsBmyMkzShbqpcphJ1KxHXJq0NeDZO0oS6ceyCPXAADsKe2BWudiSXqUTdTYhr
+        k9YGrI+TNKGuq6W4HOvwKX7BH/gTv0IvYJ7H1dgHbo4FXKYSdVNtgP66j0CLjfO3eQ6Hw8054DKVqJta
+        A/TXjHOOQ5/j3dzzXKYSdVNpwOuI8+2Mr3AUFhzHZSpR9682YDd8iDjXJPyGEzB0PJepRN1YDXgmTtKE
+        utI7iPNMki6WQ9cFl6lE3QqUc7U24Evo4vUEnqw8hQ1YFSaPHkWco8l26DaoW+Ah0C3wLbja0rsYHDPk
+        uAobUWet6Y2wfsp5WhswymPhwLVzq21dbEbcV16Aq3Vuxfx+Icd11bau1mi/eufsV2PLwoFrH1XbutiC
+        uK+8DFfr6Jaqs2fQgCrL19X2Loa+GjsfXQO8XxxULg3bu3BnQKYBoi90BzmqLO7Vl/MJLtM+cef9sKMq
+        GOX6ep9qP3klbO/CnQEvwdU20SIGOaosZ4ftTX7GafU+5QS6hR1c0cWpdigOw5FYWuyzL36HO1iTTagX
+        XstcA2pnFll0MVVO3SmUOa5Ba9LY7nGfwS/jYsIuXS/pVhkXL+vhakdZ6TJl2MEMQlxbhKrpn9PeqM+c
+        I8LvOmvKBugBSNtUo1r9rr+kbpdb4Y6xzmXKsIMZhHCvnOUDlIsc12twx+j00mYUO5hBiDVFqJpui+VC
+        xtX0XLHDZcqwgxmEaPr09zHKhYyrqQHbXaYMO5hBiFuKULVvcSqW4XgcW/1+DNxzvq7Sx+FoqEb76OFH
+        1wP9uGNscJky7GAGIS4oQnWxs58Ea3e5TBl2MIMQek534UZxDch+mJKLXKYMO5hBCGm6TTWZxBmg9wP7
+        u0wZdjCDEOJeOIwyiQY8Dpspww5mKAT04vN7uKDOJBpwBmymDDuYoRCVG+CCOu8h7isvwtU6em6Y389l
+        yrCDGXWQin5c4NJn0C3vJJwCPaS8DVdb+gkH4j/ZAH1+1+OmCz4pF2JwTJcpww5mxDCV0+GCT8KVGDqe
+        y5RhBzPKQJUT8SPcIsalt04LjuUyZdjBDBeqshfehFtMxufQ9cIdw2bKsIMZLlRB7xv1zY5b3Cg/QF+t
+        uTkHXKYMO5jhQjU4C09j1Jvb7/Aq7OnuuEwZdjDDhWqh01lfk9+J+yt34xroApr6/wRcpgw72Cd2sE/s
+        YJ/YwT6xg31iB/tjbsk/YExYT3LTuTAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnConsultar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGeYUxB9wAAACBjSFJNAACH
+        EAAAjBIAAP1NAACBPgAAWesAARIPAAA85gAAGc66ySIyAAABJmlDQ1BBZG9iZSBSR0IgKDE5OTgpAAAo
+        z2NgYDJwdHFyZRJgYMjNKykKcndSiIiMUmA/z8DGwMwABonJxQWOAQE+IHZefl4qAwb4do2BEURf1gWZ
+        xUAa4EouKCoB0n+A2CgltTiZgYHRAMjOLi8pAIozzgGyRZKywewNIHZRSJAzkH0EyOZLh7CvgNhJEPYT
+        ELsI6Akg+wtIfTqYzcQBNgfClgGxS1IrQPYyOOcXVBZlpmeUKBhaWloqOKbkJ6UqBFcWl6TmFit45iXn
+        FxXkFyWWpKYA1ULcBwaCEIWgENMAarTQZKAyAMUDhPU5EBy+jGJnEGIIkFxaVAZlMjIZE+YjzJgjwcDg
+        v5SBgeUPQsykl4FhgQ4DA/9UhJiaIQODgD4Dw745AMDGT/0ZOjZcAAAACXBIWXMAAAsTAAALEwEAmpwY
+        AAAGS0lEQVR4XuXbV6gdVRTG8ViwdxSR2FCMptgbURQ7NgTRqERsEBWxY48SsIAGuyiCgkFUVLAgmkhi
+        e7OEqLGLCvqiDwr2iuX6XzB7WGfPN2WdO4f7cB9+5Nw1s/f+1sm5c+bMmTtlbGxsUpPFyUQWI1asWKHs
+        jnlYiEWF23Ae9oUaMxSVKUIWI7JAF+FdjLX4FPOxDvI5QlSmCFmMKIIciE+gmm3yDY7HQFMRKlOELEYQ
+        4jSo5iLs1VBprguVKUIWuyLA0VANDeNCVBpso3JFyGIXLL4h/oVqZlizUGmyicoWIYtdsPgTUE2Mx4eo
+        NNlEZYuQxTYsvDVUA304DJVG66h8EbLYhoVvhArfh2dRabSOyhchi21Y+G2o8H34Eauj0qyi8kXIYhMW
+        XR9/QYXvy56oNKuojBGy2IRFd4UK3adTUWlWURkjZLEJix4KFbpPl6DSrKIyRshiExY9Fip0n65BpVlF
+        ZYyQxSYsehRU6D5dgUqzisoYIYtNWHQ/qNB9OgeVZhWVMUIWm7DotlCh+3QMKs0qKmOELDZh0VXxHVTw
+        vtiZZqVZRWWMkMU2LPwSVPA+fIlKo3VUvghZbMPC9vldhe/Do6g0Wkfli5DFNiy8E1T4PoSuEKl8EbLY
+        BYt/ANXAePyC1VBptI7KFiGLXbD4mVBNjMetqDTZRGWLkMWuCPADVCPD2hSVJpuoXBGy2BUBzoVqZBi3
+        o9JgG5UrQhYjCPE5VEMR9ru/BioNtlGZImQxghAzoZqKOBKV5rpQmSJkMaIIchlUY120vfS3w/6wj+Gz
+        sQ3K7SpThCxGuDAPQTXY5BX4ORJr9kHU/Xp9jHsxW2WKkMUIQni/QgWucwD8+H3wMtS+dZ7DDJWtC1mM
+        YHHvTaiQdez6Yhp7VVEb1jyVr40sRrCwZ19sqHDKXKRxdxS13NO4AIfDrkPYwfJSvAC1/3yVsYksRrBo
+        slsRoovFSOMuL2reI9gBfv7cLrCXfz52rspZRxYjWNDsga+LAF1sDhs3w9USO7lK83Zh1w/zObZQWRVZ
+        7IqFTsLzbuEuHkcK/05RS85G2tZJkeM6+HmW5FnryGITJt8IV+OLYrGodOS3f339GZSNdeVyvQ4/3zSf
+        u44sKkxoR+zr8X2xwDDsw9MqsPkeLmrJZigb68rlmw4/30Kfv44s5pjMbl741k0+LPt1SeH9McPXQ7Kc
+        byHNudJvqyOLCZPYiYmfdLzsTjGbN7+ybHeUlU1FZHn9seAPrOe3K7JoGGy/5z5kH66EzW03Vfn6wSib
+        isgynwg/70y/XZFFBtqR2k/Ul4th89uJja/bK61sKiLLfQT8vHv77UqlwKDouXiEne7aGvk7gH34KZuK
+        yLLb27Kfd7rfrgz8wID8yNy3O2HrbOlqxu4gLZuKyPLbu1Sa8zes7bcr5QN2zl8+o2BfqKTwXxW1vB7i
+        m+HnlUhzLvfb6pQPGJCfSIyC/a+kS18PFLVkK5SNdeXy7wU/34K0rUn5gAG/ZxOMit1fYOvZ5wdffxVl
+        Y125/B/Bzzc1bWtSPmCAvW/6CUbFDrKpgdeKWnIt0rZOiuz3wM+zKPXVpnzAoD+zSUZpZ9ia+cHQLEDZ
+        YAd3wY/vdAaYlA8Y2Mepblf2tVpq4Iyi5i2DXQBJ+yj21vkG8rH2hNh5xhzfaJ3yAQPqrsqMyg1IzdRd
+        DrMDs92UeTpOgH0ddwu63qe42DerlA/YeS0M+xF3WP6ymL0S/obar429pebvKslS33Bu4Ad2tjvA7Wis
+        JhoV+99NT8L2eBJqvzqPYV3YWLXd1D4JssiAs/Cem2DU7G+L0pNg7GbMm7Ec9rWZ3/cn2O/+TZjlMp8M
+        v19OPgmVgscgO9DcjfeLSUbJDsL2N0f5hZGNsSPsSZkGe5WW211Wu3dpCdTcyYu+PzPwQxMG22f442C3
+        x9i3QPatzmewK0Tj+cOJ//Az/oEdg87HmiibbCJy2juIWicZeCUMDB4GE9rv31TYbTN2OnoQ7GZKu9Vl
+        Dk4p2Cc1q9ktcIfA/nzOrgrbKfAG8I2ly2atajIthWo+uT/tWxkcxWQTSmUybGt8JaT9KgOjmGxCqUwJ
+        2+teCcvSPpVBUUw2oVQmj33yJ8HuQ9wkba8MiGKyCaUy5djvPtg72VMomzcDO05Gsjh5jE35HyzZ5Asz
+        zkKQAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnGerenciar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGeYUxB9wAAACBjSFJNAACH
+        EAAAjBIAAP1NAACBPgAAWesAARIPAAA85gAAGc66ySIyAAABJmlDQ1BBZG9iZSBSR0IgKDE5OTgpAAAo
+        z2NgYDJwdHFyZRJgYMjNKykKcndSiIiMUmA/z8DGwMwABonJxQWOAQE+IHZefl4qAwb4do2BEURf1gWZ
+        xUAa4EouKCoB0n+A2CgltTiZgYHRAMjOLi8pAIozzgGyRZKywewNIHZRSJAzkH0EyOZLh7CvgNhJEPYT
+        ELsI6Akg+wtIfTqYzcQBNgfClgGxS1IrQPYyOOcXVBZlpmeUKBhaWloqOKbkJ6UqBFcWl6TmFit45iXn
+        FxXkFyWWpKYA1ULcBwaCEIWgENMAarTQZKAyAMUDhPU5EBy+jGJnEGIIkFxaVAZlMjIZE+YjzJgjwcDg
+        v5SBgeUPQsykl4FhgQ4DA/9UhJiaIQODgD4Dw745AMDGT/0ZOjZcAAAACXBIWXMAAAsTAAALEwEAmpwY
+        AAAHbUlEQVR4XuXbCawdUxzHcWuKCmpraTTUUltb+1pLiJZSsW+xbylBEBE0iCWIfV8aDSUiJEStsQSx
+        VGiL2Fp7QuwEta/P93dzz8t//vOfeTMjppLX5HPde87//OeceffOnDkz5uvp6enXwsL+JCzsT8LCOmbO
+        nDkv7I83MCnqk1B3RTdmXFSfhIV1sIE2bYbH0GNMCPp0sou5FyN9nOQK6iJxW/RXt4NK/saKpj/bmTpv
+        lO27ZD40QdK2bI5oUPI2jsIx+LlbFhni+5/50ARJ2/QQooFVMTnqf66gLhK3aQyiwVWxVtT/XEFdJG6b
+        /kUDLPNg1HcJC+sgeaK/zgHY19iva2XY2KYWw0fwA/wM9+A+RMeAOVHfJSysg+SymtlYZDbsQOrQztsJ
+        h+AZ+NznYlHTn8GY0q2zHsBBGIsVUnxmME2QTA6F36D1FxZBiq9iH7yLKF9yddQnoe4uF2v9jhmKCxvX
+        QSKZ1E1cZhOk+CquQpQn+RZhn4S6QfitGxtSXNjYI3gibkTvhMPUyR0IN2Lo+JDirU2hr+yWpkzORJQn
+        mY5MXzzq9dOL2spcxYQNLQIvMY2+w1hXL9Fv0zsCKT45DTZGs7hUd3a3rMjryPTVo/5jE+/1vQMIutY1
+        So4zMePxjakr8gI2RBpg0W90C6j+UlMW0XFlqO2vRZ1+clG7XooLGwsBF/gGzm3Q1zCqK6MLk7J2f2Ad
+        LI9roB33IebCxz5b0PcBeM3EJTpu6MD6HM5RbK6xUHkSfOM2/YSBUF+SJXARfKx25jgMwVBo3vE+fJzG
+        NNCPNfNBCFrXNJqXXoHdAcmriOJ1avvTlSVP+nEmuQKCV8T3pvG8Mhl+8PIOovgyL/pxJmEhDdZ2Cdr2
+        EvzA5TBE8VWMj8aaK0hooJlYlOi/9iv0e/eDlzmI2ogOnlF58nQ0zlyBRaPzXZIys3AqdsZobITdcTE+
+        RdTG+xHpNOgVrQjJzdBPdxWUnWFyl8SZDx4Nqv4UDofvsLUo7ISqiCZaUXvRTDGa2c12fV4S+hb5uJex
+        so2VzAePBn2twOh0NQq2o2V0RRflsU5A1DY5BekgrYEODvqtb1/K9zkm+pgkV0CwvkqasWnqmpIU0Tze
+        dq6K0xHlSjTp0fbVj6i9aJJ0Obb1/U+o2wOaTS4e1SedF4J0oaLFBC0u9nUwSTqXovy3ibKLlETndJ3y
+        puE6jEAulx1ME50XEn2JqBNlluu2baLJGWYqcrnsYJrovJDoLUQbLTI9JeB9E/oKR3nL6Eify5X60VTn
+        hUTRhUOZ3iVm3jcxP6qeGpMbkMuV+tFU54VEdXfA9SkB75uqu83/1Q6YkhLwvomFUGUNwfpPd8AHiDZa
+        5M2UgPdNDEOUt8wtyOVK/Wiq80IiXXpGGy2zRrdtE8cjylnmJuRy2cE00Xkh0UrQwueV0A2GKmeFad22
+        TXyFKKeln8hT0OlPa//hxMgOpomwUEhe5TrgQOQ61YfbEeVKNGdfHboLFLWXraHnBI6M+i7Uacb5KEZH
+        9UlYmNBY596ok5ZugdnOlbkMUQ5rN0RtRXeJ9I2w8RsH/daymI3R2mJn4ublCiwaVT1Y6XEU3ZKynbXW
+        x8OI2lq6yInaiy6t9TCEb6MryMVMn0eaOks3Sda245PMB48G0T22IrqWvxu6mtNP42BofeBJRPERXYec
+        CDvwRPf0ojbyPLSD9oJulEYxMsyPMfPBIlgdiZK0YSv4HSDPIoqv4q5onLkCIVgPI0VJ2qLrfC1z+x2g
+        mzBRfBW5Y4XkCghczjWcVzQ5WxB+JxQti5d53I8zyRUQvCyiJaW2aS7iBy9Ft8x1HNC6ZFQ3y48zCQtp
+        sKZL0Dbd1EwDXhjqjx6SuB8+9lYMN31fD0906yxNpXUg1cLpAik+M3CLoO3hk1ha7b3TlfXlF+ieo1Z4
+        onrRHZ5lsCpeRNlRvTMbjVCn+39RG9EOfkhxYeOEoL1No0Q/j71MjBYgyzqZ6K9nD2xnwMco9wZQvabl
+        vt7Szhxk+2tRp29NNG/opbiwsUXgBNNId2p7v27deqny/F60dL4j0mXxJ7DrfmfB57D0L9NXj/roJmlS
+        7QEJIXgbHFtQJxci2oil54hSvKUZpJ7wXNqUSV9PiMxArj8W9e+ZeK/6DihDIjnaJC5in/6oQvP3KE+i
+        x+EKl7ypGw49RBG17VBc2LgOEokuYMKNGP5+f1/0bPCD0F/xB0Q5yw6CRbNGPSShU+xUxYWN6yCRaJX3
+        C0QblEeQYpvQ7S498qKnUnxurV/oAkgLrVpq0zRaxyofpxspumeZeUgiM5gmSJgsDq0h6ECW6EgsNu7f
+        Klqs0ROkOpBGdb3L+F5YWAfJ26b/CyQaZJnw1riEhXWQvE17IhpgFWOi/ucK6iJxm/QvGlwV90f9zxXU
+        ReK27IpoYKKDrE6zO6DsGaLMJE4yH5ogaVu0FqBTmB+Uzj69Fze817qhjxHdAB5h+y6ZD02QtE1LQeuP
+        X0MPTuqon1vno2wXaOldMXpA4jwM8HGSK+hvwsL+JCzsT8LC/iQs7D965vsHj2O/BPwtfscAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
 </root>
